<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AnasayfaFragment">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tablayout"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:elevation="2dp"
                android:overScrollMode="never"
                android:scrollbarSize="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tabContentStart="18dp"
                app:tabIndicatorColor="@color/orange"
                app:tabMode="auto"
                app:tabPaddingStart="8dp"
                app:tabSelectedTextColor="@color/orange"
                app:tabTextColor="@color/bottomBarItemGrey">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/women" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/men" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ev_yasam" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trendyol_collection" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="visible" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:rotationX="1"
                    android:text="@string/all_cats" />

            </com.google.android.material.tabs.TabLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvMarket"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="12dp"
                app:layout_constraintEnd_toStartOf="@+id/cvYemek"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tablayout">


                <ImageView
                    android:id="@+id/hizliMarketView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/hizli"
                    tools:ignore="ImageContrastCheck" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvYemek"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardCornerRadius="12dp"
                app:layout_constraintBottom_toBottomOf="@+id/cvMarket"
                app:layout_constraintEnd_toStartOf="@+id/cvDolap"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/cvMarket"
                app:layout_constraintTop_toTopOf="@+id/cvMarket">

                <ImageView
                    android:id="@+id/yemekView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/yemek" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvDolap"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardCornerRadius="12dp"
                app:layout_constraintBottom_toBottomOf="@+id/cvYemek"
                app:layout_constraintEnd_toStartOf="@+id/cvKategoriler"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/cvYemek"
                app:layout_constraintTop_toTopOf="@+id/cvYemek">

                <ImageView
                    android:id="@+id/dolapView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/dolap" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvKategoriler"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="12dp"
                app:layout_constraintBottom_toBottomOf="@+id/cvDolap"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cvDolap"
                app:layout_constraintTop_toTopOf="@+id/cvDolap">

                <ImageView
                    android:id="@+id/kategorilerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/kategoriler"
                    tools:ignore="ImageContrastCheck" />
            </androidx.cardview.widget.CardView>


            <ImageView
                android:id="@+id/sanaOzel"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/sana"
                app:layout_constraintEnd_toStartOf="@+id/ivDiscount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cvMarket"
                tools:ignore="ImageContrastCheck"
                android:contentDescription="@string/todo" />

            <ImageView
                android:id="@+id/ivDiscount"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/indirim"
                app:layout_constraintBottom_toBottomOf="@+id/sanaOzel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/sanaOzel"
                app:layout_constraintTop_toTopOf="@+id/sanaOzel" />

            <TextView
                android:id="@+id/sanaOzelUrunler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/sana_ozel_urunler"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sanaOzel" />

            <TextView
                android:id="@+id/tumUrunler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:text="@string/tum_urunler"
                android:textColor="@color/orange"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/sanaOzelUrunler"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/sanaOzelUrunler" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvItems"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sanaOzelUrunler">

            </androidx.recyclerview.widget.RecyclerView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/firsatItems"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_margin="2dp"
                android:layout_marginTop="9dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvItems"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>